Fixed Gallery layout on mobile
Made the gallery layout wrap on mobile with the title above the actual
Imgur gallery, as well as restricting the galleries max-width

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -66,25 +66,35 @@ p {
 
 #gallery {
   width: 100%;
-  height: 60vh;
+  min-height: 60vh;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   background: #fafafa;
   box-shadow: 0 0 10px #1d1f22;
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
   z-index: 10;
 }
 
 .carousel {
-  width: 100%;
-  display: flex;
   justify-content: center;
   align-items: center;
+  display: inline-block;
+  max-width: 100vw;
 }
 
 .gallery-content {
-  width: 80%;
+  padding: 1em;
+}
+
+@media screen and (max-width: 1330px) {
+  .gallery-content {
+    order: -1;
+  }
 }
 
 .gallery-content h1 {
